==> vppillai/h3Docs/apps/tcp_client/firmware/src/config/pic32mz_w1_curiosity_freertos/initialization.c <==
#include "configuration.h"
#include "definitions.h"
#include "device.h"
#include "net_pres/pres/net_pres_enc_glue.h"

void SYS_Initialize ( void* data )
{
    /* Start out with interrupts disabled before configuring any modules */
    __builtin_disable_interrupts();

  
    SYS_PMU_MLDO_TRIM();
    CLK_Initialize();
    /* Configure Wait States */
    PRECONbits.PFMWS = 5;



	GPIO_Initialize();

    NVM_Initialize();

    CORETIMER_Initialize();
	UART1_Initialize();


    /* Initialize the PIC32MZW1 Driver */
    CRYPT_RNG_Initialize(wdrvPIC32MZW1InitData.pCryptRngCtx);
    sysObj.drvWifiPIC32MZW1 = WDRV_PIC32MZW_Initialize(WDRV_PIC32MZW_SYS_IDX_0, (SYS_MODULE_INIT*)&wdrvPIC32MZW1InitData);


    SYS_NET_Initialize();

    sysObj.sysTime = SYS_TIME_Initialize(SYS_TIME_INDEX_0, (SYS_MODULE_INIT *)&sysTimeInitData);
    sysObj.sysConsole0 = SYS_CONSOLE_Initialize(SYS_CONSOLE_INDEX_0, (SYS_MODULE_INIT *)&sysConsole0Init);

    SYS_CMD_Initialize((SYS_MODULE_INIT*)&sysCmdInit);

    sysObj.sysDebug = SYS_DEBUG_Initialize(SYS_DEBUG_INDEX_0, (SYS_MODULE_INIT*)&debugInit);


    /* WiFi Service Initialization */
    sysObj.syswifi = SYS_WIFI_Initialize(NULL,NULL,NULL);
    SYS_ASSERT(sysObj.syswifi  != SYS_MODULE_OBJ_INVALID, "SYS_WIFI_Initialize Failed" );


    sysObj.ba414e = DRV_BA414E_Initialize(0, (SYS_MODULE_INIT*)&ba414eInitData);

    sysObj.netPres = NET_PRES_Initialize(0, (SYS_MODULE_INIT*)&netPresInitData);


    /* TCPIP Stack Initialization */
    sysObj.tcpip = TCPIP_STACK_Init();
    SYS_ASSERT(sysObj.tcpip != SYS_MODULE_OBJ_INVALID, "TCPIP_STACK_Init Failed" );


    CRYPT_WCCB_Initialize();

    APP_PIC32MZW1_Initialize();


    EVIC_Initialize();

	/* Enable global interrupts */
    __builtin_enable_interrupts();


}
